k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: payslip
spec:
  finalizers:
  - kubernetes
