k8s/nginx-ingress copy.yml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-payslip
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx-payslip
#   rules:
#   - http:
#   #- host: localhost
#       paths:
#       - path: /api
#         pathType: Prefix      
#         backend:
#           service:
#             name: subscription-engine
#             port:
#               number: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
---
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        backend:
          service: 
            name: subscription-engine
            port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscription-engine
                port:
                  number: 8080
